[package]
edition = "2021"
name    = "xiao_drone_led_controller"
version = "0.1.0"

[[bin]]
name = "xiao_drone_led_controller"
path = "./src/bin/main.rs"

[dependencies]
defmt = "0.3.10"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-hal = { version = "1.0.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = [
  "defmt",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "defmt",
] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "defmt",
  "esp32c3",
  "unstable",
] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
serde-json-core = { version = "0.6", features = ["heapless"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
smart-leds = "0.4.0"
ws2812-spi = "0.5.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
